--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.9 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.10 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=fb147579"></script>
+    <script src="../../_static/documentation_options.js?v=c2801b12"></script>
     <script src="../../_static/doctools.js?v=888ff710"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -39,7 +39,6 @@
 <span class="sd">Plotting functions.</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
-
 
 <span class="kn">import</span> <span class="nn">functools</span>
 <span class="kn">import</span> <span class="nn">math</span>
@@ -562,8 +561,10 @@
 <span class="sd">        indicated in the slider.</span>
 <span class="sd">    addtl_slider_stats_hide_not_filter : None or list</span>
 <span class="sd">        By default, `addtl_slider_stats` are filtered entirely from data set. If you just</span>
-<span class="sd">        them excluded from lineplot calculation but marked as filtered on heat map,</span>
-<span class="sd">        add names of stats to this list.</span>
+<span class="sd">        them excluded from lineplot but marked as hidden on heat map (eg, gray box),</span>
+<span class="sd">        add names of stats to this list. Mutations that fail one of these hiding filters</span>
+<span class="sd">        are always shown as hidden on the heat map rather than fully excluded, even if</span>
+<span class="sd">        they fail other filters in `addtl_slider_stats`.</span>
 <span class="sd">    init_floor_at_zero : bool</span>
 <span class="sd">        Initial value for option to put floor of zero on value is `stat_col`.</span>
 <span class="sd">    init_site_statistic : {&#39;sum&#39;, &#39;mean&#39;, &#39;max&#39;, &#39;min&#39;}</span>
@@ -704,7 +705,6 @@
         <span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="o">**</span><span class="p">{</span><span class="n">stat_col</span><span class="p">:</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span> <span class="o">*</span> <span class="n">scale_stat_col</span><span class="p">})</span>
     <span class="p">)</span>
 
-    <span class="c1"># filter `data_df` by any minimums in `slider_binding_range_kwargs`</span>
     <span class="k">if</span> <span class="n">slider_binding_range_kwargs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">slider_binding_range_kwargs</span> <span class="o">=</span> <span class="p">{}</span>
 
@@ -770,9 +770,11 @@
     <span class="c1"># get tooltips for heatmap</span>
     <span class="n">float_cols</span> <span class="o">=</span> <span class="p">[</span><span class="n">c</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">req_cols</span> <span class="k">if</span> <span class="n">data_df</span><span class="p">[</span><span class="n">c</span><span class="p">]</span><span class="o">.</span><span class="n">dtype</span> <span class="o">==</span> <span class="nb">float</span><span class="p">]</span>
     <span class="n">heatmap_tooltips</span> <span class="o">=</span> <span class="p">[</span>
-        <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;quantitative&quot;</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.3g&quot;</span><span class="p">)</span>
-        <span class="k">if</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">float_cols</span>
-        <span class="k">else</span> <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;nominal&quot;</span><span class="p">)</span>
+        <span class="p">(</span>
+            <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;quantitative&quot;</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.3g&quot;</span><span class="p">)</span>
+            <span class="k">if</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">float_cols</span>
+            <span class="k">else</span> <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">c</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;nominal&quot;</span><span class="p">)</span>
+        <span class="p">)</span>
         <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">req_cols</span>
         <span class="k">if</span> <span class="n">c</span> <span class="o">!=</span> <span class="n">category_col</span> <span class="ow">or</span> <span class="n">show_category_label</span>
     <span class="p">]</span>
@@ -1001,11 +1003,13 @@
                 <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
                     <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&lt;=</span> <span class="p">(</span><span class="n">slider</span> <span class="o">+</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># round tol</span>
                     <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isFinite</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">])</span>  <span class="c1"># do not filter null</span>
+                    <span class="o">|</span> <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat_hide&quot;</span><span class="p">]</span>  <span class="c1"># do not filter hidden sites</span>
                 <span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
                     <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="p">(</span><span class="n">slider</span> <span class="o">-</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># round tol</span>
                     <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isFinite</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">])</span>  <span class="c1"># do not filter null</span>
+                    <span class="o">|</span> <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat_hide&quot;</span><span class="p">]</span>  <span class="c1"># do not filter hidden sites</span>
                 <span class="p">)</span>
     <span class="c1"># Remove any sites that are only wildtype and filter with site zoom brush</span>
     <span class="n">base_chart</span> <span class="o">=</span> <span class="p">(</span>
@@ -1212,9 +1216,9 @@
         <span class="n">heatmaps</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">heatmap_bg</span> <span class="o">+</span> <span class="n">heatmap_hide</span> <span class="o">+</span> <span class="n">heatmap</span> <span class="o">+</span> <span class="n">heatmap_wildtype</span><span class="p">)</span>
     <span class="n">heatmaps</span> <span class="o">=</span> <span class="n">alt</span><span class="o">.</span><span class="n">vconcat</span><span class="p">(</span><span class="o">*</span><span class="n">heatmaps</span><span class="p">,</span> <span class="n">spacing</span><span class="o">=</span><span class="mi">10</span><span class="p">)</span><span class="o">.</span><span class="n">resolve_scale</span><span class="p">(</span>
         <span class="n">x</span><span class="o">=</span><span class="s2">&quot;shared&quot;</span><span class="p">,</span>
-        <span class="n">color</span><span class="o">=</span><span class="s2">&quot;shared&quot;</span>
-        <span class="k">if</span> <span class="n">heatmap_color_scheme</span> <span class="ow">or</span> <span class="nb">len</span><span class="p">(</span><span class="n">categories</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
-        <span class="k">else</span> <span class="s2">&quot;independent&quot;</span><span class="p">,</span>
+        <span class="n">color</span><span class="o">=</span><span class="p">(</span>
+            <span class="s2">&quot;shared&quot;</span> <span class="k">if</span> <span class="n">heatmap_color_scheme</span> <span class="ow">or</span> <span class="nb">len</span><span class="p">(</span><span class="n">categories</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span> <span class="k">else</span> <span class="s2">&quot;independent&quot;</span>
+        <span class="p">),</span>
     <span class="p">)</span>
 
     <span class="n">chartlist</span> <span class="o">=</span> <span class="p">[]</span>
@@ -1340,7 +1344,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2019--2023.
+      &copy;2019--2024.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.6</a>
