--- a/_modules/polyclonal/polyclonal.html
+++ b/_modules/polyclonal/polyclonal.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal &#8212; polyclonal 6.8 documentation</title>
+    <title>polyclonal.polyclonal &#8212; polyclonal 6.10 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=5f6cf160"></script>
+    <script src="../../_static/documentation_options.js?v=c2801b12"></script>
     <script src="../../_static/doctools.js?v=888ff710"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -39,7 +39,6 @@
 <span class="sd">Defines :class:`Polyclonal` objects for handling antibody mixtures.</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
-
 
 <span class="kn">import</span> <span class="nn">collections</span>
 <span class="kn">import</span> <span class="nn">copy</span>  <span class="c1"># noqa: F401</span>
@@ -431,16 +430,16 @@
 <span class="sd">       barcode aa_substitutions   IC50</span>
 <span class="sd">    0       AA                   0.085</span>
 <span class="sd">    1       AC              M1C  0.230</span>
-<span class="sd">    2       GA              M1C  0.230</span>
-<span class="sd">    3       AG              G2A  0.296</span>
-<span class="sd">    4       AT              A4K  0.128</span>
-<span class="sd">    5       TA              A4L  0.117</span>
-<span class="sd">    6       CA          M1C G2A  0.355</span>
-<span class="sd">    7       CG          M1C A4K  0.722</span>
-<span class="sd">    8       CC          G2A A4K  1.414</span>
-<span class="sd">    9       TC          G2A A4L  0.858</span>
-<span class="sd">    10      CT      M1C G2A A4K  3.237</span>
-<span class="sd">    11      TG      M1C G2A A4L  1.430</span>
+<span class="sd">    2       AG              G2A  0.296</span>
+<span class="sd">    3       AT              A4K  0.128</span>
+<span class="sd">    4       TA              A4L  0.117</span>
+<span class="sd">    5       CA          M1C G2A  0.355</span>
+<span class="sd">    6       CG          M1C A4K  0.722</span>
+<span class="sd">    7       CC          G2A A4K  1.414</span>
+<span class="sd">    8       TC          G2A A4L  0.858</span>
+<span class="sd">    9       CT      M1C G2A A4K  3.237</span>
+<span class="sd">    10      TG      M1C G2A A4L  1.430</span>
+<span class="sd">    11      GA              M1C  0.230</span>
 
 <span class="sd">    Or the IC90s:</span>
 
@@ -448,16 +447,16 @@
 <span class="sd">       barcode aa_substitutions    IC90</span>
 <span class="sd">    0       AA                    0.464</span>
 <span class="sd">    1       AC              M1C   1.260</span>
-<span class="sd">    2       GA              M1C   1.260</span>
-<span class="sd">    3       AG              G2A   1.831</span>
-<span class="sd">    4       AT              A4K   0.976</span>
-<span class="sd">    5       TA              A4L   0.782</span>
-<span class="sd">    6       CA          M1C G2A   2.853</span>
-<span class="sd">    7       CG          M1C A4K   4.176</span>
-<span class="sd">    8       CC          G2A A4K   7.473</span>
-<span class="sd">    9       TC          G2A A4L   4.532</span>
-<span class="sd">    10      CT      M1C G2A A4K  18.717</span>
-<span class="sd">    11      TG      M1C G2A A4L   9.532</span>
+<span class="sd">    2       AG              G2A   1.831</span>
+<span class="sd">    3       AT              A4K   0.976</span>
+<span class="sd">    4       TA              A4L   0.782</span>
+<span class="sd">    5       CA          M1C G2A   2.853</span>
+<span class="sd">    6       CG          M1C A4K   4.176</span>
+<span class="sd">    7       CC          G2A A4K   7.473</span>
+<span class="sd">    8       TC          G2A A4L   4.532</span>
+<span class="sd">    9       CT      M1C G2A A4K  18.717</span>
+<span class="sd">    10      TG      M1C G2A A4L   9.532</span>
+<span class="sd">    11      GA              M1C   1.260</span>
 
 <span class="sd">    Or the fold change IC90s of all mutations:</span>
 <span class="sd">    &gt;&gt;&gt; model.mut_icXX_df(</span>
@@ -2182,10 +2181,9 @@
             <span class="n">fit_kwargs</span><span class="p">[</span><span class="s2">&quot;fix_hill_coefficient&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">True</span>
             <span class="n">fit_kwargs</span><span class="p">[</span><span class="s2">&quot;fix_non_neutralized_frac&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">True</span>
             <span class="n">fit_kwargs</span><span class="p">[</span><span class="s2">&quot;reg_activity_weight&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">fit_fixed_first_reg_activity_weight</span>
-            <span class="n">fit_kwargs</span><span class="p">[</span>
-                <span class="s2">&quot;log_desc&quot;</span>
-            <span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;fixed Hill coefficient and non-neutralized frac&quot;</span> <span class="o">+</span> <span class="p">(</span>
-                <span class="sa">f</span><span class="s2">&quot; </span><span class="si">{</span><span class="n">log_desc</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">if</span> <span class="n">log_desc</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
+            <span class="n">fit_kwargs</span><span class="p">[</span><span class="s2">&quot;log_desc&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span>
+                <span class="s2">&quot;fixed Hill coefficient and non-neutralized frac&quot;</span>
+                <span class="o">+</span> <span class="p">(</span><span class="sa">f</span><span class="s2">&quot; </span><span class="si">{</span><span class="n">log_desc</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">if</span> <span class="n">log_desc</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
             <span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="o">**</span><span class="n">fit_kwargs</span><span class="p">)</span>
         <span class="k">elif</span> <span class="n">fit_site_level_first</span><span class="p">:</span>
@@ -3488,7 +3486,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2019--2023.
+      &copy;2019--2024.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.6</a>
