--- a/polyclonal.plot.html
+++ b/polyclonal.plot.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>plot &#8212; polyclonal 6.9 documentation</title>
+    <title>plot &#8212; polyclonal 6.10 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css?v=7f9a90b1" />
-    <script src="_static/documentation_options.js?v=fb147579"></script>
+    <script src="_static/documentation_options.js?v=c2801b12"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -225,8 +225,10 @@ are not filtered.</p></li>
 <li><p><strong>addtl_slider_stats_as_max</strong> (<em>None</em><em> or </em><em>list</em>) – For slider stats listed here, filter for values &lt;= rather than &gt;= the value
 indicated in the slider.</p></li>
 <li><p><strong>addtl_slider_stats_hide_not_filter</strong> (<em>None</em><em> or </em><em>list</em>) – By default, <cite>addtl_slider_stats</cite> are filtered entirely from data set. If you just
-them excluded from lineplot calculation but marked as filtered on heat map,
-add names of stats to this list.</p></li>
+them excluded from lineplot but marked as hidden on heat map (eg, gray box),
+add names of stats to this list. Mutations that fail one of these hiding filters
+are always shown as hidden on the heat map rather than fully excluded, even if
+they fail other filters in <cite>addtl_slider_stats</cite>.</p></li>
 <li><p><strong>init_floor_at_zero</strong> (<em>bool</em>) – Initial value for option to put floor of zero on value is <cite>stat_col</cite>.</p></li>
 <li><p><strong>init_site_statistic</strong> (<em>{'sum'</em><em>, </em><em>'mean'</em><em>, </em><em>'max'</em><em>, </em><em>'min'}</em>) – Initial value for site statistic in lineplot, calculated from <cite>stat_col</cite>.</p></li>
 <li><p><strong>cell_size</strong> (<em>float</em>) – Size of cells in heatmap</p></li>
@@ -373,7 +375,7 @@ to <code class="docutils literal notranslate"><span class="pre">&lt;rename_stat_
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2019--2023.
+      &copy;2019--2024.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.6</a>
