--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.11 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.13 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
-    <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=c058f7c8" />
+    <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=66f89f0b"></script>
-    <script src="../../_static/doctools.js?v=9a2dae69"></script>
+    <script src="../../_static/documentation_options.js?v=f5789178"></script>
+    <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -994,7 +994,7 @@
             <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span>
                 <span class="n">_stat_not_hidden</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">if_</span><span class="p">(</span>
                     <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat_hide&quot;</span><span class="p">],</span>
-                    <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">(),</span>
+                    <span class="nb">float</span><span class="p">(</span><span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">()),</span>
                     <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat&quot;</span><span class="p">],</span>
                 <span class="p">),</span>
             <span class="p">)</span><span class="o">.</span><span class="n">transform_joinaggregate</span><span class="p">(</span>
@@ -1357,7 +1357,7 @@
       &#169;2019--2024.
       
       |
-      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.0.2</a>
+      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
       &amp; <a href="https://alabaster.readthedocs.io">Alabaster 1.0.0</a>
       
     </div>
