--- a/_modules/polyclonal/polyclonal.html
+++ b/_modules/polyclonal/polyclonal.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal &#8212; polyclonal 6.11 documentation</title>
+    <title>polyclonal.polyclonal &#8212; polyclonal 6.13 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
-    <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=c058f7c8" />
+    <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=66f89f0b"></script>
-    <script src="../../_static/doctools.js?v=9a2dae69"></script>
+    <script src="../../_static/documentation_options.js?v=f5789178"></script>
+    <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
@@ -1726,7 +1726,7 @@
         <span class="p">)</span>
         <span class="k">assert</span> <span class="n">pred_pvs</span><span class="o">.</span><span class="n">shape</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">_pvs</span><span class="o">.</span><span class="n">shape</span>
         <span class="k">assert</span> <span class="n">dpred_pvs_dparams</span><span class="o">.</span><span class="n">shape</span> <span class="o">==</span> <span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">params</span><span class="p">),</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_pvs</span><span class="p">))</span>
-        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpred_pvs_dparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_matrix</span>
+        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpred_pvs_dparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_array</span>
         <span class="n">residuals</span> <span class="o">=</span> <span class="n">pred_pvs</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_pvs</span>
         <span class="n">loss</span><span class="p">,</span> <span class="n">dloss_dr</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_scaled_pseudo_huber</span><span class="p">(</span><span class="n">delta</span><span class="p">,</span> <span class="n">residuals</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
         <span class="k">assert</span> <span class="n">loss</span><span class="o">.</span><span class="n">shape</span> <span class="o">==</span> <span class="n">dloss_dr</span><span class="o">.</span><span class="n">shape</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">_pvs</span><span class="o">.</span><span class="n">shape</span>
@@ -3054,7 +3054,7 @@
 <span class="sd">        Differs from :meth:`Polyclonal._compute_pv` in that it works if just</span>
 <span class="sd">        one or multiple BinaryMap objects.</span>
 
-<span class="sd">        If `calc_grad` is `True`, also returns `scipy.sparse.csr_matrix`</span>
+<span class="sd">        If `calc_grad` is `True`, also returns `scipy.sparse.csr_array`</span>
 <span class="sd">        of gradient as described in :meth:`Polyclonal._compute_pv`.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -3111,7 +3111,7 @@
 <span class="sd">            ``p_vc`` is 1D array ordered by concentration and then variant</span>
 <span class="sd">            variant. So elements are `ivariant + iconcentration * nvariants`,</span>
 <span class="sd">            and length is nconcentrations * nvariants. If ``calc_grad=True``,</span>
-<span class="sd">            then ``dpvc_dparams`` is `scipy.sparse.csr_matrix` of shape</span>
+<span class="sd">            then ``dpvc_dparams`` is `scipy.sparse.csr_array` of shape</span>
 <span class="sd">            (len(params), nconcentrations * nvariants). Note that</span>
 <span class="sd">            len(params) is nepitopes * (1 + binarylength).</span>
 
@@ -3185,18 +3185,18 @@
         <span class="n">dpvc_dbetaparams</span> <span class="o">=</span> <span class="n">dpevc_dbeta</span><span class="o">.</span><span class="n">reshape</span><span class="p">(</span>
             <span class="n">bmap</span><span class="o">.</span><span class="n">binarylength</span> <span class="o">*</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">epitopes</span><span class="p">),</span> <span class="n">n_vc</span>
         <span class="p">)</span>
-        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpvc_dbetaparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">coo_matrix</span>
+        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpvc_dbetaparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">coo_array</span>
         <span class="c1"># combine to make dpvc_dparams, noting activities before betas</span>
         <span class="c1"># in params</span>
         <span class="n">dpvc_dparams</span> <span class="o">=</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">vstack</span><span class="p">(</span>
             <span class="p">[</span>
-                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_matrix</span><span class="p">(</span><span class="n">dpvc_da</span><span class="p">),</span>
-                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_matrix</span><span class="p">(</span><span class="n">dpvc_dn</span><span class="p">),</span>
-                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_matrix</span><span class="p">(</span><span class="n">dpvc_dt</span><span class="p">),</span>
+                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_array</span><span class="p">(</span><span class="n">dpvc_da</span><span class="p">),</span>
+                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_array</span><span class="p">(</span><span class="n">dpvc_dn</span><span class="p">),</span>
+                <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_array</span><span class="p">(</span><span class="n">dpvc_dt</span><span class="p">),</span>
                 <span class="n">dpvc_dbetaparams</span><span class="o">.</span><span class="n">tocsr</span><span class="p">(),</span>
             <span class="p">]</span>
         <span class="p">)</span>
-        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpvc_dparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_matrix</span>
+        <span class="k">assert</span> <span class="nb">type</span><span class="p">(</span><span class="n">dpvc_dparams</span><span class="p">)</span> <span class="ow">is</span> <span class="n">scipy</span><span class="o">.</span><span class="n">sparse</span><span class="o">.</span><span class="n">csr_array</span>
         <span class="k">assert</span> <span class="n">dpvc_dparams</span><span class="o">.</span><span class="n">shape</span> <span class="o">==</span> <span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">params</span><span class="p">),</span> <span class="n">n_vc</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">p_vc</span><span class="p">,</span> <span class="n">dpvc_dparams</span>
 
@@ -3492,7 +3492,7 @@
       &#169;2019--2024.
       
       |
-      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.0.2</a>
+      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
       &amp; <a href="https://alabaster.readthedocs.io">Alabaster 1.0.0</a>
       
     </div>
