--- a/genindex.html
+++ b/genindex.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 6.11 documentation</title>
+    <title>Index &#8212; polyclonal 6.13 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
-    <link rel="stylesheet" type="text/css" href="_static/basic.css?v=c058f7c8" />
+    <link rel="stylesheet" type="text/css" href="_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css?v=7f9a90b1" />
-    <script src="_static/documentation_options.js?v=66f89f0b"></script>
-    <script src="_static/doctools.js?v=9a2dae69"></script>
+    <script src="_static/documentation_options.js?v=f5789178"></script>
+    <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="#" />
@@ -327,16 +327,18 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.n_models_by_site">n_models_by_site (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalBootstrap.n_threads">n_threads (polyclonal.polyclonal_collection.PolyclonalBootstrap attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.non_neutralized_frac_df">non_neutralized_frac_df (polyclonal.polyclonal.Polyclonal property)</a>
 
       <ul>
         <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.non_neutralized_frac_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.non_neutralized_frac_df_replicates">non_neutralized_frac_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
   </ul></td>
@@ -432,6 +434,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.regions">regions (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalBootstrap.root_polyclonal">root_polyclonal (polyclonal.polyclonal_collection.PolyclonalBootstrap attribute)</a>
 </li>
   </ul></td>
@@ -584,7 +588,7 @@
       &#169;2019--2024.
       
       |
-      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.0.2</a>
+      Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
       &amp; <a href="https://alabaster.readthedocs.io">Alabaster 1.0.0</a>
       
     </div>
